--- a/src/input/main.scss
+++ b/src/input/main.scss
@@ -6,9 +6,10 @@
 #{$input-prefix} {
     @include box-sizing;
     vertical-align: middle;
-
+ 
+    @debug box-sizing;
     input {
-        height: 100%;
+        height: 100%; 
 
         &[type="reset"],
         &[type="submit"] {
@@ -95,6 +96,8 @@
         @include input-border-radius($form-element-medium-corner);
     }
 
+    @debug $css-prefix;
+ 
     &.#{$css-prefix}large {
         @include input-size($form-element-large-height, $input-l-padding, $form-element-large-font-size, $input-l-label-padding-left, $input-l-icon-padding-right);
         @include input-icon-size($form-element-large-icon-size);
